static/style/auto/z_latest.css
/* latest and latest tool */

div.ep_latest_result {
	margin-bottom: 0.5em;
	margin-top: 0.5em;
}

div.ep_latest_tool_result {
	margin-bottom: 0.5em;
	margin-top: 0.5em;
}

div.ep_latest_tool_list {
    display: grid;
    grid-template-columns: repeat(auto-fill,minmax(250px, 1fr)); /* Default to 3 columns on larger screens */
    gap: 8px; /* Adjust the gap as needed */
    max-width: 100%;
}

.ep_citation_details {
	width: 100%;
        height: 80px;
        overflow: initial; 
        white-space: normal; /* Prevent text from wrapping */
        text-overflow: ellipsis;
        position: relative; 
}

.truncated::after {
     content: '...';
     display: inline-block;
}

div.ep_link_title a {
      text-decoration: none;
      color: #666666; 
      font-family: "Helvetica", sans-serif;
      overflow: hidden;
      text-overflow: ellipsis; /* Truncate text with ellipsis */
      display: -webkit-box;
      -webkit-line-clamp: 3;
      -webkit-box-orient: vertical;
 }

div.ep_link_authorname a {
      text-decoration: none;
      color: #8C0013;
}

div.dropdown-content {
      display: block;
      position: absolute;
      z-index: 2;
      top: 40%;
}

.full-names {
 background-color: white;
 border: 1px solid rgba(204, 204, 204, 0.8);
 margin-top: 2px;
 width: fit-content; 
 padding-left: 10px;
 padding-right: 60px;
 padding-top: 8px;
 padding-bottom: 8px;
 box-shadow: 2px 2px 2px 2px #eeeeee;
}

div.dropdown-content-table table{
      color: #333333; /* Change to your preferred color */
 display: block; 
 max-height: 1.4em; /* Three lines of text */
  text-overflow: ellipsis; /* Truncate text with ellipsis */
 }

/* Optional: Add styles to make the ellipsis visible */
div.dropdown-content-table  table:hover {
  white-space: normal; /* Allow text to wrap on hover */
  max-height: none; /* Remove the height limit on hover */
}

@media (max-width: 1288px) {
    div.ep_latest_tool_list {
    grid-template-columns: repeat(auto-fill,minmax(250px, 1fr)); /* Default to 3 columns on larger screens */
    }
    .ep_latest_tool_result_block {
       width: 100%;/* Additional styles for smaller screens */
    }
    .ep_link_title a {
	font-size: 14px;
        width: 100%; /* Adjust maximum width for smaller screens */
	display: -webkit-box;
        -webkit-line-clamp: 3;
        -webkit-box-orient: vertical;
     }
   
    .dropdown-content-table table {
	display: block;
	font-size: 14px;
        width: 100%; /* Adjust maximum width for smaller screens */
    }
    .name-header {
        display: block;
        font-size: 14px;
        width: 100%; 
    }
    .full-names {
        font-size: 14px; 
    }
}

@media (max-width: 1067px) {
    div.ep_latest_tool_list {
    grid-template-columns: repeat(auto-fill,minmax(200px, 1fr)); /* Default to 3 columns on larger screens */
    }
    /* Adjust individual items for even smaller screens if needed */
    .ep_latest_tool_result_block {
       width: 100%; /* Additional styles for even smaller screens */
    }
    
     .ep_link_title a {
        font-size: 12px;
        width: 100%; /* Adjust maximum width for smaller screens */
        display: -webkit-box;
        -webkit-line-clamp: 3;
        -webkit-box-orient: vertical;
     }
   
     .dropdown-content-table table {
        display: block;
        font-size: 14px;
        width: 100%; /* Adjust maximum width for smaller screens */
    }

    .name-header {
        display: block;
        font-size: 12px;
        width: 100%; 
    }     

    .full-names table {
        font-size: 12px; 
    }
}

.expandbtn {
            background: none;
            border: none;
            cursor: pointer;
            outline: none;
            text-align: left; /* Align text to the left to prevent centering of the image */
        }

#expand-icon {
            width: 100%; /* Set the image width to 100% of the button */
            height: auto; /* Maintain aspect ratio */
        }

.image-container {
            display: inline-block; /* Ensure the container wraps around the content */
            position: relative; /* Enable positioning of pseudo-elements */
            /* Add other styles as needed */
        }

        .image-container::before {
            content: ""; /* Create a pseudo-element */
            position: absolute; /* Position it absolutely within the container */
            top: 0;
            left: 0;
            width: 100%; /* Make it cover the entire container */
            height: 100%;
            background-image: url('{$config.rel_path}/style/images/minus.svg'); /* Replace with your background image path */
            background-size: cover;
            background-repeat: no-repeat;
            opacity: 0.5; /* Adjust the opacity as needed */
            z-index: -1; /* Place it behind the content */
        }

.ep_citation_tile_result_docs.ep_restricted_doc {
    background-image: url('/style/images/restricted2.png');
    background-size: 80%;
    background-position: 25px;
    opacity: 0.5;
    border: none;
}

.ep_citation_tile_result_docs.ep_citation_tile_result_metadata_only {
    background-image: url('/style/images/metadata-only.png');
    background-size: 80%;
    background-position: 25px;
    opacity: 0.5;
    border: none;
}
.ep_citation_tile_result_docs.ep_public_doc {
    background-image: url('/style/images/default_image.png');
    background-size: 80%;
    background-position: 25px;
    opacity: 0.5;
    border: none;
}
.ep_citation_tile_result_link {
    display: block;
    text-decoration: none;
}

